tried first entry into table of contents

--- a/projects.html
+++ b/projects.html
@@ -57,26 +57,7 @@
 								<div class="inner">
 
 									<section>
-										<h3 class="major">Text</h3>
-										<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-										This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-										This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-										<h4>Blockquote</h4>
-										<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-										<h4>Preformatted</h4>
-										<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-  print 'Iteration ' + i;
-  deck.shuffle();
-  i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-									</section>
-
-									<section>
-										<div id="test_table">Test table go to here weeeeee<div>
+										<div id="test_table">Table of Contents<div>
 										<h3 class="major">Table</h3>
 										<h4>Default</h4>
 										<div class="table-wrapper">
@@ -84,15 +65,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												<thead>
 													<tr>
 														<th>Name</th>
-														<th>Description</th>
-														<th>Price</th>
+														<th>Link</th>
+														<th>Repo</th>
 													</tr>
 												</thead>
 												<tbody>
 													<tr>
-														<td>Item One</td>
-														<td>Ante turpis integer aliquet porttitor.</td>
-														<td>29.99</td>
+														<td><li><a href="Star Tracker" class="button fit"></a></li></td>
+														<td>Testing for a low-cost cubesat star-tracker</td>
+														<td> </td>
 													</tr>
 													<tr>
 														<td>Item Two</td>
