slightly redid first entry to table

--- a/projects.html
+++ b/projects.html
@@ -65,19 +65,19 @@
 												<thead>
 													<tr>
 														<th>Name</th>
-														<th>Link</th>
+														<th>Description</th>
 														<th>Repo</th>
 													</tr>
 												</thead>
 												<tbody>
 													<tr>
-														<td><li><a href="Star Tracker" class="button fit"></a></li></td>
+														<td><a href="Star Tracker">Star Tracker</a></td>
 														<td>Testing for a low-cost cubesat star-tracker</td>
 														<td> </td>
 													</tr>
 													<tr>
-														<td>Item Two</td>
-														<td>Vis ac commodo adipiscing arcu aliquet.</td>
+														<td><li><a href="Rigid body dyna" class="button fit"></a></li></td>
+														<td></td>
 														<td>19.99</td>
 													</tr>
 													<tr>
