removed space in name

--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
 								<div class="inner">
 
 									<section>
-										<div id="test_table">Table of Contents<div>
+										<div id="contents_table">Table of Contents<div>
 										<h3 class="major">Table</h3>
 										<h4>Default</h4>
 										<div class="table-wrapper">
@@ -71,14 +71,14 @@
 												</thead>
 												<tbody>
 													<tr>
-														<td><a href="Star Tracker">Star Tracker</a></td>
+														<td><a href="Star_Tracker">Star Tracker</a></td>
 														<td>Testing for a low-cost cubesat star-tracker</td>
 														<td> </td>
 													</tr>
 													<tr>
-														<td><li><a href="Rigid body dyna" class="button fit"></a></li></td>
-														<td></td>
-														<td>19.99</td>
+														<td><a href="Rigid body dyna">Rigid Body Dynamics Simulation</a></td>
+														<td>Rigid body dynamics and control system simulation for the Cal Poly Cubesat Lab</td>
+														<td> </td>
 													</tr>
 													<tr>
 														<td>Item Three</td>
@@ -107,7 +107,7 @@
 									</section>
 									
 									<section>
-										<div id="Star Tracker"><div></div>
+										<div id="Star_Tracker"><div></div>
 										<h3 class="major"></h3>
 											<h4>Cal Poly Cubesat Laboratory - Star Tracker</h4>
 												<p><span class="image left"><img src="images/blue_canyon_standard_NST.png" alt="" /></span>Star trackers are a powerful attitude determination device that is used in many commercial satellite missions. Until recently, star trackers have been mostly out of reach of low-cost cubesat missions due to their cost. Using software and hardware compatible with CPCL missions, we were able to create a star tracker achieving 89 percent accuracy in star identitification for $250, compared with comercial star trackers nearing $30,000. The Blue Canyon Standard NST (pictured on right) is capable of 6 arcsec attitude knowledge (much higher fidelity than required for a low-budget mission) but is far beyond the monetary reach of a typical low-budget mission.</p>
