--- a/projects.html
+++ b/projects.html
@@ -71,12 +71,12 @@
 												</thead>
 												<tbody>
 													<tr>
-														<td><a href="Star_Tracker">Star Tracker</a></td>
+														<td><a href="#Star_Tracker">Star Tracker</a></td>
 														<td>Testing for a low-cost cubesat star-tracker</td>
 														<td> </td>
 													</tr>
 													<tr>
-														<td><a href="Rigid body dyna">Rigid Body Dynamics Simulation</a></td>
+														<td><a href="#Rigid body dyna">Rigid Body Dynamics Simulation</a></td>
 														<td>Rigid body dynamics and control system simulation for the Cal Poly Cubesat Lab</td>
 														<td> </td>
 													</tr>
@@ -130,7 +130,7 @@
 									<section>
 
 									<section>
-										<div id="Rigid body dyna"><div></div>
+										<div id="Rigid_body_dyna"><div></div>
 										<h3 class="major"></h3>
 											<h4>Cal Poly Cubesat Laboratory - Large Scale Rigid Body Dynamics Simulation for ADCS</h4>
 												<p><span class="image left"><img src="images/simulink_adcs.png" alt="" /></span>The attitude determination and control system (ADCS) is historically a difficult system to design and implement. While, the Cal Poly Cubesat Laboratory has historically used simplified, passive systems, increasing mission complexity has called for a more rebust design framework for the CPCL ADCS.</p>
