--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
 											<table>
 												<thead>
 													<tr>
-														<th>Name</th>
+														<th>Project</th>
 														<th>Description</th>
 														<th>Repo</th>
 													</tr>
@@ -76,14 +76,14 @@
 														<td> </td>
 													</tr>
 													<tr>
-														<td><a href="#Rigid body dyna">Rigid Body Dynamics Simulation</a></td>
+														<td><a href="#Rigid_body_dyna">Rigid Body Dynamics Simulation</a></td>
 														<td>Rigid body dynamics and control system simulation for the Cal Poly Cubesat Lab</td>
 														<td> </td>
 													</tr>
 													<tr>
-														<td>Item Three</td>
-														<td> Morbi faucibus arcu accumsan lorem.</td>
-														<td>29.99</td>
+														<td><a href="#Stickcube">Stickcube</a></td>
+														<td>Simulation, building and testing of self-balancing pendulum for ADCS testing purposes</td>
+														<td><a href="https://github.com/trevorgloe/stickcube_code" class="button small">Repository</a></td>
 													</tr>
 													<tr>
 														<td>Item Four</td>
