added rest of table of contents

--- a/projects.html
+++ b/projects.html
@@ -57,8 +57,8 @@
 								<div class="inner">
 
 									<section>
-										<div id="contents_table">Table of Contents<div>
-										<h3 class="major">Table</h3>
+										<div id="contents_table"><div>
+										<h3 class="major">Table of Contents</h3>
 										<h4>Default</h4>
 										<div class="table-wrapper">
 											<table>
@@ -86,14 +86,24 @@
 														<td><a href="https://github.com/trevorgloe/stickcube_code" class="button small">Repository</a></td>
 													</tr>
 													<tr>
-														<td>Item Four</td>
-														<td>Vitae integer tempus condimentum.</td>
-														<td>19.99</td>
+														<td><a href="#Crab cavity trans beam load">EIC Crab Cavity LLRF Simulations</a></td>
+														<td>Simulation and design specifications for the EIC LLRF</td>
+														<td> </td>
 													</tr>
 													<tr>
-														<td>Item Five</td>
-														<td>Ante turpis integer aliquet porttitor.</td>
-														<td>29.99</td>
+														<td><a href="#MCM">Cyclist Energy Optimization, MCM 2022</a></td>
+														<td>Optimation with SQP of road cyclist bioenergy for winning entry in 2022 MCM</td>
+														<td><a href="https://github.com/trevorgloe/MCM2022" class="button small">Repository</a></td>
+													</tr>
+													<tr>
+														<td><a href="#Fermilab">Fermilab Muon Beamline Analysis</a></td>
+														<td>Simulation and data analysis of Fermilab's Muon Campus M4 beamline</td>
+														<td><a href="https://github.com/trevorgloe/SULI_fermilab_M4_analysis" class="button small">Repository</a></td>
+													</tr>
+													<tr>
+														<td><a href="#Mushroom data">Mycology Data Analysis</a></td>
+														<td>Clustering and topological data analysis on Cal Poly Mycology club data</td>
+														<td><a href="https://github.com/trevorgloe/Math476project_mushroom_data" class="button small">Repository</a></td>
 													</tr>
 												</tbody>
 												<tfoot>
