--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/backpacking_2.jpg alt="" /></span></div>
 							<h2>Trevor Loe</h2>
 							<p>A personal website for portfolio stuff</a></p>
 						</div>
