--- a/index.html
+++ b/index.html
@@ -41,9 +41,45 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="col-4"><span class="image fit"><img src="images/backpacking_2.jpg alt="" /></span></div>
+							<div class="logo"><span class="image fit"><img src="images/backpacking_2.jpg alt="" /></span></div>
 							<h2>Trevor Loe</h2>
 							<p>A personal website for portfolio stuff</a></p>
+						</div>
+					</section>
+
+					<section id="four" class="wrapper alt style1">
+						<div class="inner">
+							<h2 class="major">Vitae phasellus</h2>
+							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<section class="features">
+								<article>
+									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+									<h3 class="major">Sed feugiat lorem</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+									<h3 class="major">Nisl placerat</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+									<h3 class="major">Ante fermentum</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+									<h3 class="major">Fusce consequat</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+									<a href="#" class="special">Learn more</a>
+								</article>
+							</section>
+							<ul class="actions">
+								<li><a href="#" class="button">Browse All</a></li>
+							</ul>
 						</div>
 					</section>
 
