moved picture to try to make work

--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="image fit"><img src="images/backpacking_2.jpg alt="" /></span></div>
 							<h2>Trevor Loe</h2>
-							<p>A personal website for portfolio stuff</a></p>
+							<p>Physics and Mathematics student at Cal Poly San Luis Obispo</a><div class="col-4"><span class="image fit"><img src="images/flanders_male_tt_powergrade.png" alt="" /></span></div></p>
 						</div>
 					</section>
 
-					<section id="four" class="wrapper alt style1">
+					<section id="one" class="wrapper alt style1">
 						<div class="inner">
 							<h2 class="major">Vitae phasellus</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
