--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						</div>
 					</section>
 
-					<section id="one" class="wrapper alt style1">
+					<section id="one" class="wrapper spotlight style1">
 						<div class="inner">
 							<h2 class="major">Vitae phasellus</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
