changed image reference

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Trevor Loe</h2>
-							<p>Physics and Mathematics student at Cal Poly San Luis Obispo</a><div class="col-4"><span class="image fit"><img src="images/flanders_male_tt_powergrade.png" alt="" /></span></div></p>
+							<p>Physics and Mathematics student at Cal Poly San Luis Obispo</a><div class="col-4"><span class="image fit"><img src="images/backpacking_2.jpg" alt="" /></span></div></p>
 						</div>
 					</section>
 
