added images and a little more to about me

--- a/index.html
+++ b/index.html
@@ -53,25 +53,26 @@
 							<div class="inner">
 								<h2 class="major">About Me</h2>
 								<p>Hello! My name is Trevor Loe and I am a double major in Physics and Mathematics at The California Polytechnic State University, San Luis Obispo. I have experience in programming computational math and physics (in python, matlab and fortran), control theory, and computational physics research. I have had to oportunity to work on several research projects relating to computational accelerator physics, optimal control theory, biology and areospace engineering. I am interested in research on computational mathematics of nonlinear systems, especially physically motivated systems and optimal control theory.</p>
+								<a href="CV_TrevorLoe_Oct2023.pdf" class="button small">CV</a>
 							</div>
 						</section>
 
-						<section id="academic activties" class="wrapper alt style1">
+						<section id="hobbies" class="wrapper alt style1">
 							<div class="inner">
-								<h2 class="major">Academic Activities</h2>
-								<p></p>
+								<h2 class="major">Hobbies</h2>
+								<p>I've been surfing my whole life, growing up next to the beach. I've also always loved music and playing guitar. More recently I have been enjoying rock climbing and backpacking around different parts of california central coast area.</p>
 								<section>
 									<h3 class="major">Image</h3>
 									<h4>Fit</h4>
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
+											<div class="col-12"><span class="image fit"><img src="images/hawaii_hike.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/backpacking_pano.JPG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/surf_pic1.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/surf_pic3.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/rock_pic2.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/rock_pic3.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/rock_pic4.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
