added education section

--- a/index.html
+++ b/index.html
@@ -57,17 +57,27 @@
 							</div>
 						</section>
 
+						<section id="Education" class="wrapper alt style2">
+							<div class="inner">
+								<h2 class="major">Education</h2>
+								<h4>Unordered</h4>
+												<ul>
+													<li>California Polytechnic State University, San Luis Obispo, CA - Bachelor's of Science in Physics and Mathematics</li>
+												</ul>
+							</div>
+						</section>
+
 						<section id="hobbies" class="wrapper alt style1">
 							<div class="inner">
 								<h2 class="major">Hobbies</h2>
 								<p>I've been surfing my whole life, growing up next to the beach. I've also always loved music and playing guitar. More recently I have been enjoying rock climbing and backpacking around different parts of california central coast area.</p>
 								<section>
-									<h3 class="major">Image</h3>
-									<h4>Fit</h4>
+									<h3 class="major"></h3>
+									<h4></h4>
 									<div class="box alt">
 										<div class="row gtr-uniform">
 											<div class="col-12"><span class="image fit"><img src="images/hawaii_hike.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/backpacking_pano.JPG" alt="" /></span></div>
+											<div class="col-12"><span class="image fit"><img src="images/backpacking_pano.JPG" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/surf_pic1.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/surf_pic3.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/rock_pic2.jpg" alt="" /></span></div>
