--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
 						<section id="Education" class="wrapper alt style2">
 							<div class="inner">
 								<h2 class="major">Education</h2>
-								<h4>Unordered</h4>
+								<h4></h4>
 												<ul>
-													<li>California Polytechnic State University, San Luis Obispo, CA - Bachelor's of Science in Physics and Mathematics</li>
+													<li><b>California Polytechnic State University, San Luis Obispo, CA</b> - Bachelor's of Science in Physics and Mathematics
+													Aug. 2019 - Dec. 2023</li>
 												</ul>
 							</div>
 						</section>
@@ -83,9 +84,7 @@
 											<div class="col-4"><span class="image fit"><img src="images/rock_pic2.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/rock_pic3.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/rock_pic4.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/guiar1.jpg" alt="" /></span></div>
 										</div>
 									</div>
 								</section>
