added activities section

--- a/activities.html
+++ b/activities.html
@@ -6,11 +6,15 @@
 -->
 <html>
 	<head>
-		<title>Trevor Loe - Publications</title>
+		<title>Trevor Loe - Activities</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+		<script id="MathJax-script" async
+				src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js">
+		</script>
 	</head>
 	<body class="is-preload">
 
@@ -43,43 +47,45 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Publications</h2>
-								<p>Below are publications that I am an author or co-author on.</p>
+								<h2>Projects</h2>
+								<p>Below are the conferences and presentations I have given related to research done.</p>
 							</div>
 						</header>
 
+						<!-- Begin actual projects-->
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
 
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/muon_campus.jpg" alt="" /></a>
-											<h3 class="major">Commissioning the Muon Campus external beamline: first beam optics measurement</h3>
-											<p>Trevor Loe and Diktys Stratakis. Journal of Instrumentation 18(04):P04005, April 2023</p>
-											<a href="https://iopscience.iop.org/article/10.1088/1748-0221/18/04/P04005" class="special">Link to paper</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/crab_cavities_0.jpg" alt="" /></a>
-											<h3 class="major">Time-domain simulation of the crab cavity/beam interation</h3>
-											<p>Trevor Hidalgo, Trevor Loe, Matti Toivola, Themis Mastoridis, Kevin Smith. BNL Technical Notes, Feb. 2023</p>
-											<a href="https://technotes.bnl.gov/Home/ViewTechNote/224087?selectedPageNumber=0" class="special">Link to paper</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/blue_canyon_standard_NST.png" alt="" /></a>
-											<h3 class="major">A Low Cost Star Tracker for CubeSat Missions</h3>
-											<p>Josh Grace, Luca Merlo Paula Soares, Trevor Loe, and John Bellardo. AIAA Dec. 2021</p>
-											<a href="https://arc.aiaa.org/doi/abs/10.2514/6.2022-0520" class="special">Link to paper</a>
-										</article>
-									</section>
+									<section>
+										<div id="Presentations"><div></div>
+										<h3 class="major"></h3>
+											<h4>Presentations</h4>
+											<h4></h4>
+												<ul>
+													<li><b>CSU Research Competition, SDSU</b> - Chosen from the Cal Poly iternal competition to compete in the state-wide competition at SDSU. Presented a 10 minute presentation on research in Crab Cavity LLRF design and simulation work. Given on April 29th, 2023.</li>
+													<li><b>CSU Research Competition, Cal Poly SLO</b> - Presented a 10 minute presentation on research in Crab Cavities LLRF design and simulation.</li>
+													<li><b>Brookhaven National Lab EIC Simulation Results</b> - Contributed to presentation given to Brookhaven National Lab on results of EIC transverse stability studies. Presentation was given by Dr. Themis Mastoridis</li>
+												</ul>
+									<section>
+
+									<section>
+										<div id="Posters"><div></div>
+										<h3 class="major"></h3>
+											<h4>Poster Presentations</h4>
+											<h4></h4>
+												<ul>
+													<li><b>MAA Mathfest, Philadelphia, PA</b> - Chosen from the Cal Poly iternal competition to compete in the state-wide competition at SDSU. Presented a 10 minute presentation on research in Crab Cavity LLRF design and simulation work. Given on April 29th, 2023.</li>
+													<li><b>CSU Research Competition, Cal Poly SLO</b> - Presented a 10 minute presentation on research in Crab Cavities LLRF design and simulation.</li>
+													<li><b>Brookhaven National Lab EIC Simulation Results</b> - Contributed to presentation given to Brookhaven National Lab on results of EIC transverse stability studies. Presentation was given by Dr. Themis Mastoridis</li>
+												</ul>
+									<section>
 
 								</div>
 							</div>
 
-					</section>
-
 				<!-- Footer -->
-				<!--	<section id="footer">
+					<!-- <section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
