--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="projects.html">Projects</a></li>
+								<li><a href="activities.html">Activities</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
