added pictures to presentations

--- a/activities.html
+++ b/activities.html
@@ -67,7 +67,9 @@
 													<li><b>CSU Research Competition, Cal Poly SLO</b> - Presented a 10 minute presentation on research in Crab Cavities LLRF design and simulation.</li>
 													<li><b>Brookhaven National Lab EIC Simulation Results</b> - Contributed to presentation given to Brookhaven National Lab on results of EIC transverse stability studies. Presentation was given by Dr. Themis Mastoridis</li>
 												</ul>
+												<div class="col-4"><span class="image fit"><img src="images/conference_1.jpg" alt="" /></span></div>
 									<section>
+									
 
 									<section>
 										<div id="Posters"><div></div>
@@ -79,6 +81,7 @@
 													<li><b>APS Far West Section Meeting, Honolulu, HI</b> - Presented "Crab Cavity Low-Level RF Design Simulation Tools for the Electron-Ion Collider" in poster session. Poster was presented on October 7th, 2022 and won the SPS poster award at the competition.</li>
 													<li><b>SULI Presentation, Fermi National Accelerator Laboratory</b> - Presented "Beam Optics Analysis from the Mu2e External Line Commissioning" from work done over my 10 week SULI internship. Poster was presented on August 10th, 2022.</li>
 												</ul>
+												<div class="col-4"><span class="image fit"><img src="images/conference_2.jpg" alt="" /></span></div>
 									<section>
 
 									<section>
