--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="projects.html">Projects</a></li>
 								<li><a href="activities.html">Activities</a></li>
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
