made some small edits

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<section id="about" class="wrapper alt style2">
 							<div class="inner">
 								<h2 class="major">About Me</h2>
-								<p>Hello! My name is Trevor Loe and I am a double major in Physics and Mathematics at The California Polytechnic State University, San Luis Obispo. I have experience in programming computational math and physics (in python, matlab and fortran), control theory, and computational physics research. I have had to oportunity to work on several research projects relating to computational accelerator physics, optimal control theory, biology and areospace engineering. I am interested in research on computational mathematics of nonlinear systems, especially physically motivated systems and optimal control theory.</p>
+								<p>Hello! My name is Trevor Loe and I am a double major in Physics and Mathematics at The California Polytechnic State University, San Luis Obispo. I have experience in programming computational math and physics (in Python, Matlab, and Fortran), control theory, and computational physics research. I have had to opportunity to work on several research projects relating to computational accelerator physics, optimal control theory, biology, and aerospace engineering. I am interested in research on computational mathematics of nonlinear systems, especially physically motivated systems, and optimal control theory.</p>
 								<a href="CV_TrevorLoe_Oct2023.pdf" class="button small">CV</a>
 							</div>
 						</section>
@@ -73,7 +73,7 @@
 						<section id="hobbies" class="wrapper alt style1">
 							<div class="inner">
 								<h2 class="major">Hobbies</h2>
-								<p>I've been surfing my whole life, growing up next to the beach. I've also always loved music and playing guitar. More recently I have been enjoying rock climbing and backpacking around different parts of california central coast area.</p>
+								<p>I've been surfing my whole life, growing up next to the beach. I've also always loved music and playing guitar. More recently I have been enjoying rock climbing and backpacking around different parts of California's central coast area.</p>
 								<section>
 									<h3 class="major"></h3>
 									<h4></h4>
