fixed linkedin link

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 								<p>Email: tgloe@calpoly.edu</p>
 								<p>Alt email: trevor1loe@gmail.com</p>
 								<a href="https://github.com/trevorgloe" class="button small">Github</a>
-								<a href="hhtps://www.linkedin.com/in/trevor-loe-b71811194" class="button small">LinkedIn</a>
+								<a href="https://www.linkedin.com/in/trevor-loe-b71811194" class="button small">LinkedIn</a>
 							</div>
 						</header>
 
