--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<section id="about" class="wrapper alt style2">
 							<div class="inner">
 								<h2 class="major">About Me</h2>
-								<p>Hello! My name is Trevor Loe and I am a double major in Physics and Mathematics at The California Polytechnic State University, San Luis Obispo. I have experience in programming computational math and physics (in Python, Matlab, and Fortran), control theory, and computational physics research. I have had to opportunity to work on several research projects relating to computational accelerator physics, optimal control theory, biology, and aerospace engineering. I am interested in research on computational mathematics of nonlinear systems, especially physically motivated systems, and optimal control theory.</p>
+								<p>Hello! My name is Trevor Loe and I am graduating as a double major in Physics and Mathematics, Summa Cum Laude at the California Polytechnic State University, San Luis Obispo. I have experience in programming computational math and physics (in Python, Matlab, and Fortran), control theory, and computational physics research. I have had to opportunity to work on several research projects relating to computational accelerator physics, optimal control theory, biology, and aerospace engineering. I am interested in research on computational mathematics of nonlinear systems, especially physically motivated systems, and optimal control theory.</p>
 								<a href="CV_TrevorLoe_Oct2023.pdf" class="button small">CV</a>
 								<p>Below you can find the research projects I've worked on, the professional activities I participated in, my teaching experience, and a list of my publications.</p>
 								<a href="projects.html" class="button">Projects</a>
