changed header for activities and teaching

--- a/activities.html
+++ b/activities.html
@@ -48,7 +48,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Projects</h2>
+								<h2>Activities</h2>
 								<p>Below are the conferences and presentations I have given related to research done.</p>
 							</div>
 						</header>
