--- a/teaching.html
+++ b/teaching.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Trevor Loe - Activities</title>
+		<title>Trevor Loe - Teaching</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,7 +48,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Projects</h2>
+								<h2>Teaching</h2>
 								<p>Below are the conferences and presentations I have given related to research done.</p>
 							</div>
 						</header>
