--- a/activities.html
+++ b/activities.html
@@ -38,6 +38,7 @@
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="projects.html">Projects</a></li>
 								<li><a href="activities.html">Activities</a></li>
+								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
