fixed typo on teaching page

--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,7 @@
 											<h4>Teaching</h4>
 											<h4></h4>
 												<ul>
-													<li><b>Cal Poly CubeSat Lab</b> - As the ADCS team lead for 1 year, gaven weekly lectures in control theory, modeling and simulation, rigid body dynamics and spacecraft instrumentation</li>
+													<li><b>Cal Poly CubeSat Lab</b> - As the ADCS team lead for 1 year, gave weekly lectures in control theory, modeling and simulation, rigid body dynamics and spacecraft instrumentation</li>
 												</ul>
 									<section>
 
