--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,12 @@
 											<p>Josh Grace, Luca Merlo Paula Soares, Trevor Loe, and John Bellardo. AIAA Dec. 2021</p>
 											<a href="https://arc.aiaa.org/doi/abs/10.2514/6.2022-0520" class="special">Link to paper</a>
 										</article>
+										<article>
+											<a href="#" class="image"><img src="images/all_OTFBgain_nyq.png" alt="" /></a>
+											<h3 class="major">Senior Project: Crab Cavity Instabilities Due to Fundamental Crabbing Mode and Crab Cavity Impedance</h3>
+											<p>Trevor Loe, Advisor: Themis Mastoridis</p>
+											<a href="TrevorLoe_seniorproj.pdf" class="special">Link to paper</a>
+										</article>
 									</section>
 
 								</div>
