added slides for past presentations and added APS FWS pres

--- a/activities.html
+++ b/activities.html
@@ -66,8 +66,11 @@
 											<h4></h4>
 												<ul>
 													<li><b>CSU Research Competition, SDSU</b> - Chosen from the Cal Poly iternal competition to compete in the state-wide competition at SDSU. Presented a 10 minute presentation on research in Crab Cavity LLRF design and simulation work. Given on April 29th, 2023.</li>
+													<a href="CSU_Research_Competition_Presentation__ECI_Crab_Cavities_LLRF_Design_-1.pdf" class="button small">Slides</a>
 													<li><b>CSU Research Competition, Cal Poly SLO</b> - Presented a 10 minute presentation on research in Crab Cavities LLRF design and simulation.</li>
+													<a href="CSU_Research_Competition_Presentation__ECI_Crab_Cavities_LLRF_Design_-1.pdf" class="button small">Slides</a>
 													<li><b>Brookhaven National Lab EIC Simulation Results</b> - Contributed to presentation given to Brookhaven National Lab on results of EIC transverse stability studies. Presentation was given by Dr. Themis Mastoridis</li>
+													<li><b>APS Far West Section Meeting, San Diego, CA</b> - Presented</li>
 												</ul>
 												<div class="col-4"><span class="image fit"><img src="images/conference_1.jpg" alt="" /></span></div>
 									<section>
