added a bit more to aps fws presentation and senior proj

--- a/activities.html
+++ b/activities.html
@@ -70,7 +70,7 @@
 													<li><b>CSU Research Competition, Cal Poly SLO</b> - Presented a 10 minute presentation on research in Crab Cavities LLRF design and simulation.</li>
 													<a href="CSU_Research_Competition_Presentation__ECI_Crab_Cavities_LLRF_Design_-1.pdf" class="button small">Slides</a>
 													<li><b>Brookhaven National Lab EIC Simulation Results</b> - Contributed to presentation given to Brookhaven National Lab on results of EIC transverse stability studies. Presentation was given by Dr. Themis Mastoridis</li>
-													<li><b>APS Far West Section Meeting, San Diego, CA</b> - Presented</li>
+													<li><b>APS Far West Section Meeting, San Diego, CA</b> - Presented "EIC Crab Cavities LLRF Design" on the ongoing work studying the crab cavities coupled bunch instabilities. Part of the accelerator/high energy physics contributed paper session.</li>
 												</ul>
 												<div class="col-4"><span class="image fit"><img src="images/conference_1.jpg" alt="" /></span></div>
 									<section>
