--- a/publications.html
+++ b/publications.html
@@ -76,7 +76,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/all_OTFBgain_nyq.png" alt="" /></a>
 											<h3 class="major">Senior Project: Crab Cavity Instabilities Due to Fundamental Crabbing Mode and Crab Cavity Impedance</h3>
-											<p>Trevor Loe, Advisor: Themis Mastoridis</p>
+											<p>Trevor Loe, Advisor: Themis Mastoridis. Submitted June 7th, 2023</p>
 											<a href="TrevorLoe_seniorproj.pdf" class="special">Link to paper</a>
 										</article>
 									</section>
