--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<h2 class="major">Education</h2>
 								<h4></h4>
 												<ul>
-													<li><b>California Polytechnic State University, San Luis Obispo, CA</b> - Bachelor's of Science in Physics and Mathematics
+													<li><b>California Polytechnic State University, San Luis Obispo, CA</b> - Bachelor's of Science in Physics and Mathematics, <i>Summa Cum Laude</i> 
 													Aug. 2019 - Dec. 2023</li>
 												</ul>
 							</div>
